<?xml version="1.0"?>
<package>
  <name>robot_control_ui</name>
  <version>0.1.0</version>
  <description>

     robot_control_ui

  </description>

  <maintainer email="2179750549@qq.com">PiKaMouse</maintainer>
  <author>PiKaMouse</author>
  <license>BSD</license>

  <!-- <url>https://github.com/haoxiliangluo/</url> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>rviz</build_depend>
  <run_depend>rviz</run_depend>

 
</package>
